<resources>
    <string name="app_name">Verifikasi.in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="nik">NIK</string>
    <string name="password">Password</string>
    <string name="pertanyaan_akun">Tidak memiliki akun?</string>
    <string name="daftar">Daftar</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email">Email</string>
    <string name="pertanyaan_akun_register">Sudah memiliki akun?</string>
    <string name="konfirmasi_identitas_anda">Konfirmasi identitas anda!</string>
    <string name="ubah_profil">Ubah profil</string>
    <string name="verifikasi_wajah">Verifikasi wajah</string>
    <string name="deskripsi_wajah">Lakukan verifikasi wajah untuk kemudahan masuk layanan</string>
    <string name="layanan_pemerintah">Layanan pemerintah</string>
    <string name="verifikasi_wajah_title">Verifikasi wajah</string>
    <string name="log_out">Log out</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="deskripsi_edit_profil">Lakukan perubahan pada profilmu disini!</string>
    <string name="nama">Nama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="tempat_lahir">Tempat lahir</string>
    <string name="tanggal_lahir">Tanggal lahir</string>
    <string name="golongan_darah">Golongan Darah</string>
    <string name="alamat">Alamat</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="agama">Agama</string>
    <string name="kawin">Status perkawinan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="kewarganegaraan">Kewarganegaraan</string>
    <string name="simpan">Simpan</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="buka_kamera">Buka kamera</string>
    <string name="verifikasi_ktp_title">Verifikasi KTP</string>
    <string name="selesaikan_pendaftaran">Selesaikan Pendaftaran</string>
    <string name="layanan1">e-Samsat</string>
    <string name="desc_layanan1">Klik disini untuk melanjutkan ke situs e-Samsat!</string>
    <string name="layanan2">BPJS</string>
    <string name="desc_layanan2">Klik disini untuk melanjutkan ke situs BPJS!</string>
    <string name="verifikasi_data">Verifikasi Data</string>
    <string name="deskripsi_verifikasi_data">Periksa data diri anda dan lengkapi data diri anda</string>
    <string name="welcome_home">Selamat datang kembali!</string>
    <string name="berlaku">Masa berlaku KTP</string>
</resources>