<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verifikasi.VerificationActivity">

    <FrameLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/md_theme_dark_onSecondary"
            android:alpha="0.5" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@android:style/Widget.Holo.ProgressBar.Large"
            />
    </FrameLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/verifikasi_wajah_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/cv_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_image"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/material_on_surface_stroke">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_verification_photo"
                android:layout_width="300dp"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:background="@color/md_theme_dark_onSecondary"
                />

            <Button
                android:id="@+id/btn_camera"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/buka_kamera"
                android:layout_gravity="center"
                android:backgroundTint="@color/md_theme_dark_onSecondary"
                android:textColor="@color/md_theme_light_onPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/iv_verification_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_upload"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/verifikasi"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/cv_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>